Working on Task 4 and 5

--- a/ML/MNIST.ipynb
+++ b/ML/MNIST.ipynb
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "colab": {
@@ -374,7 +374,7 @@
         },
         "outputId": "85abe1ac-88cd-4b59-e076-b214f7e9daf7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "q7pGs5acyqTw",
         "outputId": "fea87a7f-2e06-4cc1-9528-8509dbfb2a5c",
@@ -1297,7 +1297,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Your code goes here"
+        "from collections import Counter\n",
+        "\n",
+        "# Compute the entropy\n",
+        "def entropy(y):\n",
+        "  counts = Counter(y)\n",
+        "  probabilities = np.array(list(counts.values()) / len(y))\n",
+        "  entropy = -np.sum(probabilities * np.log2(probabilities + 1e-9))\n",
+        "  return entropy\n",
+        "\n",
+        "class DecisionTreeNode:\n",
+        "  def __init__(self, depth=0, max_depth=10):\n",
+        "    self.depth = depth\n",
+        "    self.max_depth = max_depth\n",
+        "    self.feature = None\n",
+        "    self.threshold = None\n",
+        "    self.left = None\n",
+        "    self.right = None\n",
+        "    self.value = None\n",
+        "\n",
+        "  def fit(self, x, y):\n",
+        "    # Stop Condition\n",
+        "    if len(set(y)) == 1:\n",
+        "      self.predicted_class = y[0]\n",
+        "      return\n",
+        "\n",
+        "    # If the current depth is greater than the max depth or len of x is zero\n",
+        "    if self.depth >= self.max_depth or len(x) == 0:\n",
+        "      self.predicted_class = np.bincount(y).argmax() # Set the predicted class\n",
+        "      return\n",
+        "\n",
+        "    # Find the best split\n",
+        "    best_gain = -1\n"
       ],
       "metadata": {
         "id": "Mbr8m4BYULsz"
@@ -1456,7 +1487,71 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# The architecture of a neural network\n",
+        "class NeuralNetwork:\n",
+        "  def __init__(self, input_size, hidden_size, num_layers, activation_func):\n",
+        "    self.num_layers = num_layers\n",
+        "    self.activation_func = activation_func # Exploring the three different functions\n",
+        "    self.weights = []\n",
+        "    self.biases = []\n",
+        "\n",
+        "    # Initialize the weights and biases\n",
+        "    last_size = input_size\n",
+        "    for _ in range(num_layers):\n",
+        "      # Empty weight\n",
+        "      W = torch.empty((hidden_size, last_size), requires_grad=True).uniform_(-1, 1)\n",
+        "      b = torch.empty((hidden_size, 1), requires_grad=True).uniform_(-1, 1)\n",
+        "      self.weights.append(W)\n",
+        "      self.biases.append(b)\n",
+        "      last_size = hidden_size\n",
+        "\n",
+        "    # Output layer\n",
+        "    W = torch.empty((10, hidden_size), requires_grad=True).uniform_(-1, 1)\n",
+        "    b = torch.empty((10, 1), requires_grad=True).uniform_(-1, 1)\n",
+        "    self.weights.append(W)\n",
+        "    self.biases.append(b)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    out = x\n",
+        "    for i in range(self.num_layers):\n",
+        "      out = self.activation_func(torch.matmul(self.weights[i], out) + self.biases[i])\n",
+        "    out = torch.softmax(torch.matmul(self.weights[-1], out) + self.biases[-1], dim=0)\n",
+        "    return out\n",
+        "\n",
+        "  def parameters(self):\n",
+        "    return self.weights + self.biases\n",
+        "\n",
+        "  # Stop when the accuracy no longer appears to be improving\n",
+        "  def train(self, x_train, y_train, x_val, y_val, learning_rate=0.02, batch_size=None, max_epochs=500):\n",
+        "    train_x = torch.tensor(x_train, dtype=torch.float32)\n",
+        "    train_y = torch.tensor(y_train, dtype=torch.long)\n",
+        "    val_x = torch.tensor(x_val, dtype=torch.float32)\n",
+        "    val_y = torch.tensor(y_val, dtype=torch.long)\n",
+        "\n",
+        "    start_time = time.time()\n",
+        "\n",
+        "    # Training loop\n",
+        "    for epoch in range(max_epochs):\n",
+        "      # Use a full batch size\n",
+        "      if batch_size is None:\n",
+        "        x_batch = train_x\n",
+        "        y_batch = train_y\n",
+        "      else:\n",
+        "        # Use a mini-batch size\n",
+        "        idx = []\n",
+        "        for c in range(10):\n",
+        "          idx_c = torch.where(train_y == c)[0]\n",
+        "          idx_c_sample = idx_c[torch.randperm(len(idx_c)[:10])]\n",
+        "          idx.append(idx_c_sample)\n",
+        "        idx = torch.cat(idx)\n",
+        "        x_batch = train_x[idx]\n",
+        "        y_batch = train_y[idx]\n",
+        "\n",
+        "      # Forwards\n",
+        "      preds = []\n",
+        "      loss = 0\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "GxJf4LR8f54p"
