Working on Task 5

--- a/ML/MNIST.ipynb
+++ b/ML/MNIST.ipynb
@@ -1487,30 +1487,48 @@
     {
       "cell_type": "code",
       "source": [
+        "# The network consists of:\n",
+        "# 1. An input layer with 3 features.\n",
+        "# 2. A first hidden layer with 3 neurons. Each neuron in this layer performs a linear transformation\n",
+        "#    on the input data using a weight matrix (W1) and a bias vector (b1). This is followed by a sigmoid\n",
+        "#    activation function.\n",
+        "# 3. A second hidden layer, also with 3 neurons, which processes the output of the first layer. Similar\n",
+        "#    to the first layer, it uses a weight matrix (W2) and a bias vector (b2) for linear transformation,\n",
+        "#    followed by a softmax activation function. The softmax activation is used here to normalize the\n",
+        "#    output of the second layer into a probability distribution over the three classes. This is particularly\n",
+        "#    useful for multi-class classification problems.\n",
+        "# 4. The network uses cross-entropy as the loss function, which is a common choice for classification tasks\n",
+        "#    involving softmax outputs. This loss function compares the predicted probability distribution with the\n",
+        "#    true distribution (one-hot encoded) and penalizes the predictions that diverge from the actual labels.\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
         "# The architecture of a neural network\n",
         "class NeuralNetwork:\n",
         "  def __init__(self, input_size, hidden_size, num_layers, activation_func):\n",
-        "    self.num_layers = num_layers\n",
+        "    self.num_layers = num_layers # number of hidden layers (2,3,4)\n",
         "    self.activation_func = activation_func # Exploring the three different functions\n",
         "    self.weights = []\n",
         "    self.biases = []\n",
         "\n",
-        "    # Initialize the weights and biases\n",
+        "    # Initialize the weight and bias, all hidden layers initialized\n",
         "    last_size = input_size\n",
         "    for _ in range(num_layers):\n",
-        "      # Empty weight\n",
+        "      # Empty weight matrix W\n",
         "      W = torch.empty((hidden_size, last_size), requires_grad=True).uniform_(-1, 1)\n",
+        "      # Create bias vector b\n",
         "      b = torch.empty((hidden_size, 1), requires_grad=True).uniform_(-1, 1)\n",
         "      self.weights.append(W)\n",
         "      self.biases.append(b)\n",
-        "      last_size = hidden_size\n",
+        "      last_size = hidden_size # set for the next layer\n",
         "\n",
-        "    # Output layer\n",
+        "    # Output layer, so the network ends with 10 neurons\n",
         "    W = torch.empty((10, hidden_size), requires_grad=True).uniform_(-1, 1)\n",
         "    b = torch.empty((10, 1), requires_grad=True).uniform_(-1, 1)\n",
         "    self.weights.append(W)\n",
         "    self.biases.append(b)\n",
         "\n",
+        "  # Compute the output of the neural network for an input x\n",
         "  def forward(self, x):\n",
         "    out = x\n",
         "    for i in range(self.num_layers):\n",
@@ -1518,40 +1536,125 @@
         "    out = torch.softmax(torch.matmul(self.weights[-1], out) + self.biases[-1], dim=0)\n",
         "    return out\n",
         "\n",
+        "  # Returns a list of all the model's parameters\n",
         "  def parameters(self):\n",
         "    return self.weights + self.biases\n",
         "\n",
-        "  # Stop when the accuracy no longer appears to be improving\n",
-        "  def train(self, x_train, y_train, x_val, y_val, learning_rate=0.02, batch_size=None, max_epochs=500):\n",
-        "    train_x = torch.tensor(x_train, dtype=torch.float32)\n",
-        "    train_y = torch.tensor(y_train, dtype=torch.long)\n",
-        "    val_x = torch.tensor(x_val, dtype=torch.float32)\n",
-        "    val_y = torch.tensor(y_val, dtype=torch.long)\n",
+        "# Stop when the accuracy no longer appears to be improving\n",
+        "def train(model, x_train, y_train, x_val, y_val, learning_rate=0.02, batch_size=None, max_epochs=500):\n",
+        "  # Convert the numpy arrays to PyTorch tensors for gradient tracking\n",
+        "  train_x = torch.tensor(x_train, dtype=torch.float32)\n",
+        "  train_y = torch.tensor(y_train, dtype=torch.long)\n",
+        "  val_x = torch.tensor(x_val, dtype=torch.float32)\n",
+        "  val_y = torch.tensor(y_val, dtype=torch.long)\n",
         "\n",
-        "    start_time = time.time()\n",
+        "  history = [] # stores validation accurancy over time\n",
+        "  best_val_acc = 0 # keeps track of best validation accuracy\n",
+        "  epochs_without_improve = 0 # tracks if validation stopped improving\n",
         "\n",
-        "    # Training loop\n",
-        "    for epoch in range(max_epochs):\n",
-        "      # Use a full batch size\n",
-        "      if batch_size is None:\n",
-        "        x_batch = train_x\n",
-        "        y_batch = train_y\n",
-        "      else:\n",
-        "        # Use a mini-batch size\n",
-        "        idx = []\n",
-        "        for c in range(10):\n",
-        "          idx_c = torch.where(train_y == c)[0]\n",
-        "          idx_c_sample = idx_c[torch.randperm(len(idx_c)[:10])]\n",
-        "          idx.append(idx_c_sample)\n",
-        "        idx = torch.cat(idx)\n",
-        "        x_batch = train_x[idx]\n",
-        "        y_batch = train_y[idx]\n",
+        "  start_time = time.time()\n",
         "\n",
-        "      # Forwards\n",
-        "      preds = []\n",
-        "      loss = 0\n",
+        "  # Loop over the epochs\n",
+        "  for epoch in range(max_epochs):\n",
+        "    # Use a full batch size, if batch size is no specified\n",
+        "    if batch_size is None:\n",
+        "      x_batch = train_x\n",
+        "      y_batch = train_y\n",
+        "    else:\n",
+        "      # Use a mini-batch size\n",
+        "      idx = []\n",
+        "      # Randomly sample 10 images from each class\n",
+        "      for c in range(10):\n",
+        "        index_c = torch.where(train_y == c)[0]\n",
+        "        index_c_sample = idx_c[torch.randperm(len(index_c)[:10])]\n",
+        "        index.append(index_c_sample)\n",
+        "      idx = torch.cat(idx)\n",
+        "      x_batch = train_x[idx]\n",
+        "      y_batch = train_y[idx]\n",
         "\n",
-        "\n"
+        "    # Forward pass\n",
+        "    preds = []\n",
+        "    loss = 0\n",
+        "    for i in range(x_batch.shape[0]):\n",
+        "      out = model.forward(x_batch[i])\n",
+        "      preds.append(out)\n",
+        "      y_onehot = torch.zeros(10)\n",
+        "      y_onehot[y_batch[i]] = 1.0\n",
+        "      loss += -torch.sum(y_onehot * torch.log(out + 1e-9))\n",
+        "    loss = loss / x_batch.shape[0]\n",
+        "\n",
+        "    # Backward pass to compute the gradients automatically\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # Update the weights\n",
+        "    with torch.no_grad():\n",
+        "      for param in model.parameters():\n",
+        "        param -= learning_rate * param.grad\n",
+        "        param.grad.zero_()\n",
+        "\n",
+        "    # Validation accuracy\n",
+        "    val_preds = []\n",
+        "    for i in range(val_x.shape[0]):\n",
+        "      out = model.forward(val_x[i])\n",
+        "      val_preds.append(torch.argmax(out).item())\n",
+        "    val_preds = torch.tensor(val_preds)\n",
+        "    val_acc = (val_preds == val_y).float().mean().time()\n",
+        "    history.append(val_acc)\n",
+        "\n",
+        "    # Early stopping\n",
+        "    if val_acc > best_val_acc: # When the validation accuracy improves\n",
+        "      best_val_acc = val_acc # set the better validation accuracy value\n",
+        "      epochs_without_improve = 0 # reset the counter\n",
+        "    else:\n",
+        "      epochs_without_improve += 1\n",
+        "      if epochs_without_improve >= 20:\n",
+        "        break\n",
+        "\n",
+        "    total_time = time.time() - start_time\n",
+        "\n",
+        "    return history, total_time, epoch+1\n",
+        "\n",
+        "def plot_history(history, title):\n",
+        "  plt.plot(history)\n",
+        "  plt.title(title)\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Validation Accuracy')\n",
+        "  plt.show()\n",
+        "\n",
+        "# Get the training, val and test data based on the sizes\n",
+        "train_x, train_y, val_x, val_y, test_x, test_y = preprocess_data(size)\n",
+        "\n",
+        "# Flatten all the images\n",
+        "train_x_flat = flatten_images(train_x)\n",
+        "val_x_flat = flatten_images(val_x)\n",
+        "test_x_flat = flatten_images(test_x)\n",
+        "\n",
+        "# Training the Neural Network\n",
+        "hidden_size = 32\n",
+        "num_layers = 3\n",
+        "activation_func = torch.sigmoid\n",
+        "\n",
+        "model = NeuralNetwork(input_size=49, hidden_size=hidden_size, num_layers=num_layers, activation_func=activation_func)\n",
+        "\n",
+        "history, training_time, updates = train_model(\n",
+        "    model, train_x_flat, train_y, val_x_flat, val_y,\n",
+        "    learning_rate=0.02,\n",
+        "    batch_size=None,\n",
+        "    max_epoch=500\n",
+        ")\n",
+        "\n",
+        "plot_history(history, f\"{num_layers}x{hidden_size} with {activation_func.__name__}\")\n",
+        "\n",
+        "# Evaluate test accuracy\n",
+        "test_preds = []\n",
+        "for i in range(test_X.shape[0]):\n",
+        "    out = model.forward(torch.tensor(test_X[i], dtype=torch.float32))\n",
+        "    pred_class = torch.argmax(out).item()\n",
+        "    test_preds.append(pred_class)\n",
+        "\n",
+        "test_preds = np.array(test_preds)\n",
+        "test_acc = np.mean(test_preds == test_y)\n",
+        "print(\"Test Accuracy:\", round(test_acc * 100, 2), \"%\")\n"
       ],
       "metadata": {
         "id": "GxJf4LR8f54p"
