Finished Decision Trees

--- a/ML/MNIST.ipynb
+++ b/ML/MNIST.ipynb
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "colab": {
@@ -374,7 +374,7 @@
         },
         "outputId": "c29d4df2-d87c-4fd5-f97c-14d75f18297f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "q7pGs5acyqTw",
         "outputId": "707cd158-fdfb-4e42-b208-5dfefb848908",
@@ -1313,44 +1313,56 @@
       "cell_type": "code",
       "source": [
         "\"\"\"\n",
-        "\n",
+        "Decision Trees are designed for categorical inputs, but the pixel values are continuous\n",
+        "grayscale values. So in order to adapt decision trees, I decided to convert the continuous\n",
+        "pixel features into binary splits using a fixed threshold, which was 128 a midpoint of the\n",
+        "grayscale (0-255). This means that each pixel will now be either considered \"dark\" or \"light\",\n",
+        "making it suitable for entropy-based splitting, which is a common approach in decision trees.\n",
         "\"\"\"\n",
+        "\n",
         "from collections import Counter\n",
         "\n",
-        "# Compute the entropy\n",
+        "# Use entropy to select which attribute to split on\n",
         "def entropy(y):\n",
-        "  counts = Counter(y)\n",
-        "  probabilities = np.array(list(counts.values())) / len(y)\n",
+        "  counts = Counter(y) # Frequency of labels for entropy computation\n",
+        "  probabilities = np.array(list(counts.values())) / len(y) # Calculate the probability\n",
         "  entropy = -np.sum(probabilities * np.log2(probabilities + 1e-9))\n",
         "  return entropy\n",
         "\n",
+        "# Class representing One Node for a Decision Tree\n",
         "class DecisionTreeNode:\n",
         "  def __init__(self, depth=0, max_depth=10):\n",
-        "    self.depth = depth\n",
-        "    self.max_depth = max_depth\n",
+        "    self.depth = depth # Current Depth\n",
+        "    self.max_depth = max_depth # Max depth limit\n",
+        "    # Placeholders\n",
         "    self.feature = None\n",
         "    self.threshold = None\n",
         "    self.left = None\n",
         "    self.right = None\n",
         "    self.predicted_class = None\n",
         "\n",
-        "  def fit(self, x, y):\n",
-        "    # Stop Condition\n",
+        "  # Recursive tree builder\n",
+        "  def fit(self, x, y): # x: data, y: labels\n",
+        "\n",
+        "    # Stop Condition, a pure node, only one class left\n",
         "    if len(set(y)) == 1:\n",
         "      self.predicted_class = y[0]\n",
         "      return\n",
         "\n",
-        "    # If the current depth is greater than the max depth or len of x is zero\n",
+        "    # If the current depth is greater than the max depth or no data remains\n",
         "    if self.depth >= self.max_depth or len(x) == 0:\n",
         "      self.predicted_class = np.bincount(y).argmax() # Set the predicted class\n",
         "      return\n",
         "\n",
-        "    # Find the best split\n",
-        "    best_gain = -1\n",
+        "    # Splitting each fature and finding the best split\n",
+        "    best_gain = -1 # Keep track of the best split\n",
         "    n_features  = x.shape[1]\n",
+        "    # Loop through all the features\n",
         "    for feature_index in range(n_features):\n",
-        "      thresholds = [128]\n",
+        "      thresholds = [128] # hardcoded threshold\n",
+        "      # Loop through the threshold\n",
         "      for threshold in thresholds:\n",
+        "        # Split the features index to left and right\n",
         "        left_index = x[:, feature_index] <= threshold\n",
         "        right_index = x[:, feature_index] > threshold\n",
         "        if np.sum(left_index) == 0 or np.sum(right_index) == 0:\n",
@@ -1359,17 +1371,20 @@
         "        y_left = y[left_index]\n",
         "        y_right = y[right_index]\n",
         "\n",
+        "        # Calculates the entropy and how much it is reduced by the split\n",
         "        gain = entropy(y) - (len(y_left) / len(y) * entropy(y_left) + (len(y_right) / len(y)) * entropy(y_right))\n",
+        "        # Store the best split\n",
         "        if gain > best_gain:\n",
         "          best_gain = gain\n",
         "          self.feature = feature_index\n",
         "          self.threshold = threshold\n",
         "\n",
+        "    # If no split is found\n",
         "    if best_gain == -1:\n",
         "      self.predicted_class = np.bincount(y).argmax()\n",
         "      return\n",
         "\n",
-        "    # Split recursively\n",
+        "    # If a split is found then build left and right subtrees recursively\n",
         "    left_index  = x[:, self.feature] <= self.threshold\n",
         "    right_index = x[:, self.feature] > self.threshold\n",
         "\n",
@@ -1379,6 +1394,7 @@
         "    self.right = DecisionTreeNode(self.depth + 1, self.max_depth)\n",
         "    self.right.fit(x[right_index], y[right_index])\n",
         "\n",
+        "  # Classify a single example by walking down the tree based on the feature values\n",
         "  def predict(self, x):\n",
         "    if self.predicted_class is not None:\n",
         "      return self.predicted_class\n",
@@ -1387,25 +1403,31 @@
         "    else:\n",
         "      return self.right.predict(x)\n",
         "\n",
+        "# Experimenting and the performance results\n",
         "sizes = [28, 14, 7, 4, 2]\n",
         "decision_tree_results = []\n",
         "\n",
+        "# Apply the tree to a batch of test examples\n",
         "def predict_batch(tree, x):\n",
         "  return np.array([tree.predict(X) for X in x ])\n",
         "\n",
+        "# Loop through the sizes\n",
         "for size in sizes:\n",
         "  # Get the training, val and test data based on the sizes\n",
         "  train_x, train_y, val_x, val_y, test_x, test_y = preprocess_data(size)\n",
         "  train_x_flat = flatten_images(train_x)\n",
         "  test_x_flat = flatten_images(test_x)\n",
         "\n",
+        "  # Create the tree and train it\n",
         "  tree = DecisionTreeNode(max_depth=10)\n",
         "  tree.fit(train_x_flat, train_y)\n",
         "\n",
+        "  # Get the predictions and find store the results\n",
         "  preds = predict_batch(tree, test_x_flat)\n",
         "  acc = np.mean(preds == test_y)\n",
         "  decision_tree_results.append((size, acc))\n",
         "\n",
+        "# Display the results\n",
         "decision_tree_results_df = pd.DataFrame(decision_tree_results, columns=[\"Size\", \"Accuracy\"])\n",
         "decision_tree_results_df"
       ],
@@ -1417,7 +1439,7 @@
         },
         "outputId": "5f0fe501-497e-4826-d0ec-bb45d8d361b9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1777,7 +1799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "yVYHnm2fyqTx",
         "colab": {
@@ -2096,7 +2118,7 @@
         },
         "outputId": "dfa0474e-a6a4-4365-d692-2bba3877ef4f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
